RESOLVED FIXED114166
[EFL] REGRESSION(r147743): Use the correct `operator new' override in RenderThemeEfl.
https://bugs.webkit.org/show_bug.cgi?id=114166
Summary [EFL] REGRESSION(r147743): Use the correct `operator new' override in RenderT...
Raphael Kubo da Costa (:rakuco)
Reported 2013-04-08 05:55:39 PDT
[EFL] REGRESSION(r147743): Use the correct `operator new' override in RenderThemeEfl.
Attachments
Patch (3.01 KB, patch)
2013-04-08 06:01 PDT, Raphael Kubo da Costa (:rakuco)
menard: review+
Raphael Kubo da Costa (:rakuco)
Comment 1 2013-04-08 06:01:20 PDT
Raphael Kubo da Costa (:rakuco)
Comment 2 2013-04-08 06:10:00 PDT
Note You need to log in before you can comment on or make changes to this bug.