[EFL] REGRESSION(r147743): Use the correct `operator new' override in RenderThemeEfl. https://bugs.webkit.org/show_bug.cgi?id=114166

Reviewed by Alexis Menard.

r147743 disabled GLOBAL_FAST_MALLOC_NEW on the EFL port, but this has
caused some pixel tests in WK1 to crash.

The problem stems from RenderThemeEfl::applyEdjeRTLState() directly
calling `operator new(size_t)' for some allocations.
RefCounted<RenderTheme>, on its turn, has a WTF_MAKE_FAST_ALLOCATED
call which adds some `operator new' overrides to the class. Our direct
calls in applyEdjeRTLState() made the scope resolution rules choose the
WTF_MAKE_FAST_ALLOCATED version (which uses FastMalloc's allocator),
while WTF::deleteOwnedPtr() calls the global `operator delete' (which
uses the system's free() implementation).

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::applyEdjeRTLState): Explicitly choose the
global `operator new' when calling it.

Canonical link: https://commits.webkit.org/132540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147911 268f45cc-cd09-0410-ab3c-d52691b4dbfc